Actually managed to include the right Boost version this time!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_executable(test1 main.cpp)
 
-target_link_libraries(test1 SDL2 SDL2_image SDL2_ttf)
+target_link_libraries(test1 SDL2 SDL2_image SDL2_ttf boost_json)
 
 # Those sweet, sweet designated initialisers force me to use C++20
 set_property(TARGET test1 PROPERTY CXX_STANDARD 20)
