--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,6 @@ set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_VERBOSE_MAKEFILE TRUE)
 
-add_library(SoftwareText video-sdl-software-text.cpp new_text.cpp)
 
 add_executable(test1 video-sdl-gpu.cpp video-sdl-common.cpp main.cpp)
 
@@ -18,17 +17,13 @@ add_executable(test1 video-sdl-gpu.cpp video-sdl-common.cpp main.cpp)
 # this needs improvement
 # target_include_directories(test1 PUBLIC /usr/include/x86_64-linux-gnu/)
 
-target_link_libraries(test1 PUBLIC SDL2 SDL2_image SDL2_ttf boost_json)
+target_link_libraries(test1 PUBLIC SDL2 SDL2_image SDL2_ttf boost_json sfml-system sfml-graphics sfml-audio)
 
 # Those sweet, sweet designated initialisers force me to use C++20
 set_property(TARGET test1 PROPERTY CXX_STANDARD 20)
 set_property(TARGET test1 PROPERTY CXX_EXTENSIONS OFF)
 set_property(TARGET test1 PROPERTY CXX_STANDARD_REQUIRED ON)
 
-set_property(TARGET SoftwareText PROPERTY CXX_STANDARD 20)
-set_property(TARGET SoftwareText PROPERTY CXX_EXTENSIONS OFF)
-set_property(TARGET SoftwareText PROPERTY CXX_STANDARD_REQUIRED ON)
-
 if (CMAKE_COMPILER_IS_GNUCXX)
-	target_compile_options(test1 PRIVATE -Wall -Wextra -Wno-unused-parameter -pthread -fmodules)
+	target_compile_options(test1 PRIVATE -Wall -Wextra -Wno-unused-parameter -pthread -fmodules-ts)
 endif()
