Demodulified the codebase (will probably have to redo this at a later point :()
Doesn't compile; have to decide what to do with classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,18 @@
+cmake_minimum_required(VERSION 3.0.0)
+project(test1-vn VERSION 0.1.0 LANGUAGES CXX)
+
 # Comment out if needed; since I am the primary user of this file, this makes 100% sure that I use the correct compiler
 #set(CMAKE_CXX_COMPILER "g++")
 
-cmake_minimum_required(VERSION 3.0.0)
-project(test1-vn VERSION 0.1.0 LANGUAGES CXX)
+set(BOOST_ROOT ./boost_1_79_0/)
+#set(Boost_USE_STATIC_LIBS OFF) 
+#set(Boost_USE_MULTITHREADED ON)  
+set(Boost_USE_STATIC_RUNTIME ON) 
+find_package(Boost 1.79.0) 
+
+cmake_policy(SET CMP0076 NEW)
+
+
 
 # This apparently may cause issues with non-makefile generators. Comment out if needed
 set(CMAKE_BUILD_TYPE Debug)
@@ -10,14 +20,16 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_VERBOSE_MAKEFILE TRUE)
 
 
-add_executable(test1 video-sdl-gpu.cpp video-sdl-common.cpp main.cpp)
+#add_executable(test1 main.cpp)
 
-#add_executable(test1 video-sdl-software.cpp video-sdl-common.cpp main.cpp)
+add_executable(test1 testmain.cpp)
+
+target_sources(test1 PUBLIC video-sfml.cpp video-sfml-text.cpp video-sfml-compositor.cpp compositor.cpp trees.cpp)
 
 # this needs improvement
-# target_include_directories(test1 PUBLIC /usr/include/x86_64-linux-gnu/)
+target_include_directories(test1 PUBLIC ${Boost_INCLUDE_DIRS})
 
-target_link_libraries(test1 PUBLIC SDL2 SDL2_image SDL2_ttf boost_json sfml-system sfml-graphics sfml-audio)
+target_link_libraries(test1 PUBLIC sfml-system sfml-graphics sfml-audio)
 
 # Those sweet, sweet designated initialisers force me to use C++20
 set_property(TARGET test1 PROPERTY CXX_STANDARD 20)
