The compositor bloody works! It could stand to have some redundancies worked out, but it does work.
Todo:
Support several root nodes and order them in layers. E.g. UI, foreground, background, characters

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0.0)
+cmake_minimum_required(VERSION 3.13.0)
 project(test1-vn VERSION 0.1.0 LANGUAGES CXX)
 
 # Comment out if needed; since I am the primary user of this file, this makes 100% sure that I use the correct compiler
@@ -17,7 +17,7 @@ cmake_policy(SET CMP0076 NEW)
 # This apparently may cause issues with non-makefile generators. Comment out if needed
 set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-set(CMAKE_VERBOSE_MAKEFILE TRUE)
+#set(CMAKE_VERBOSE_MAKEFILE TRUE)
 
 
 #add_executable(test1 main.cpp)
