Introduced a new versioning module.
Modified the CMakeLists to compile the versioning library as a main file. Once debugged and integrated, change this.

Added the skeleton of a state machine module.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,8 @@
 cmake_minimum_required(VERSION 3.13.0)
 project(test1-vn VERSION 0.1.0 LANGUAGES CXX)
 
-# Comment out if needed; since I am the primary user of this file, this makes 100% sure that I use the correct compiler
-#set(CMAKE_CXX_COMPILER "g++")
 
-set(BOOST_ROOT ./boost_1_79_0/)
+set(BOOST_ROOT ../boost_1_79_0/)
 #set(Boost_USE_STATIC_LIBS OFF) 
 #set(Boost_USE_MULTITHREADED ON)  
 set(Boost_USE_STATIC_RUNTIME ON) 
@@ -20,22 +18,22 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 #set(CMAKE_VERBOSE_MAKEFILE TRUE)
 
 
-#add_executable(test1 main.cpp)
 
-add_executable(test1 testmain.cpp)
 
-target_sources(test1 PUBLIC video-sfml-text.cpp video-sfml-compositor.cpp trees.cpp)
+add_executable(versiontest versioning/versioning.cpp)
+
+
 
 # this needs improvement
-target_include_directories(test1 PUBLIC ${Boost_INCLUDE_DIRS})
+target_include_directories(versiontest PUBLIC ${Boost_INCLUDE_DIRS})
 
-target_link_libraries(test1 PUBLIC sfml-system sfml-window sfml-graphics sfml-audio)
+target_link_libraries(versiontest PUBLIC sfml-system sfml-window sfml-graphics sfml-audio)
 
 # Those sweet, sweet designated initialisers force me to use C++20
-set_property(TARGET test1 PROPERTY CXX_STANDARD 20)
-set_property(TARGET test1 PROPERTY CXX_EXTENSIONS OFF)
-set_property(TARGET test1 PROPERTY CXX_STANDARD_REQUIRED ON)
+set_property(TARGET versiontest PROPERTY CXX_STANDARD 20)
+set_property(TARGET versiontest PROPERTY CXX_EXTENSIONS OFF)
+set_property(TARGET versiontest PROPERTY CXX_STANDARD_REQUIRED ON)
 
 if (CMAKE_COMPILER_IS_GNUCXX)
-	target_compile_options(test1 PRIVATE -Wall -Wextra -Wno-unused-parameter -pthread -fmodules-ts)
+	target_compile_options(versiontest PRIVATE -Wall -Wextra -Wno-unused-parameter -pthread -fmodules-ts)
 endif()
