--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
 	"cmake.configureOnOpen": false,
-	"cmake.sourceDirectory": "${workspaceFolder}/src"
+	"cmake.sourceDirectory": "${workspaceFolder}/."
 }
