Created tests for both parsers (text -> first AST)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,20 +24,29 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 
 
-add_executable(parsertest tests/parser_verifier.cpp src/parser/metasyntax/metasyntax.cpp src/parser/scriptflow/scriptflow.cpp)
-
+add_executable(metasyntax_test tests/metasyntax.test.cpp src/parser/metasyntax/metasyntax.cpp)
+add_executable(scriptflow_test tests/scriptflow.test.cpp src/parser/scriptflow/scriptflow.cpp)
 
 
 # this needs improvement
-target_include_directories(parsertest PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src ${Boost_INCLUDE_DIRS})
+target_include_directories(metasyntax_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src ${Boost_INCLUDE_DIRS})
+target_include_directories(scriptflow_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src ${Boost_INCLUDE_DIRS})
 
-target_link_libraries(parsertest PUBLIC sfml-system sfml-window sfml-graphics sfml-audio)
+
+
+target_link_libraries(metasyntax_test PUBLIC sfml-system sfml-window sfml-graphics sfml-audio)
 
 # Those sweet, sweet designated initialisers force me to use C++20
-set_property(TARGET parsertest PROPERTY CXX_STANDARD 20)
-set_property(TARGET parsertest PROPERTY CXX_EXTENSIONS OFF)
-set_property(TARGET parsertest PROPERTY CXX_STANDARD_REQUIRED ON)
+set_property(TARGET metasyntax_test PROPERTY CXX_STANDARD 20)
+set_property(TARGET metasyntax_test PROPERTY CXX_EXTENSIONS OFF)
+set_property(TARGET metasyntax_test PROPERTY CXX_STANDARD_REQUIRED ON)
+
+set_property(TARGET scriptflow_test PROPERTY CXX_STANDARD 20)
+set_property(TARGET scriptflow_test PROPERTY CXX_EXTENSIONS OFF)
+set_property(TARGET scriptflow_test PROPERTY CXX_STANDARD_REQUIRED ON)
+
 
 if (CMAKE_COMPILER_IS_GNUCXX)
-	target_compile_options(parsertest PRIVATE -ftemplate-backtrace-limit=0 -Wfatal-errors -Wall -Wextra -Wno-unused-parameter -pthread -fmodules-ts)
+	target_compile_options(metasyntax_test PRIVATE -ftemplate-backtrace-limit=0 -Wfatal-errors -Wall -Wextra -Wno-unused-parameter -pthread -fmodules-ts)
+	target_compile_options(scriptflow_test PRIVATE -ftemplate-backtrace-limit=0 -Wfatal-errors -Wall -Wextra -Wno-unused-parameter -pthread -fmodules-ts)
 endif()
