Added initial SDL code.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,15 +26,15 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_executable(metasyntax_test tests/metasyntax.test.cpp src/parser/metasyntax/metasyntax.cpp)
 add_executable(scriptflow_test tests/scriptflow.test.cpp src/parser/scriptflow/scriptflow.cpp)
-
+add_executable(gfx_sdl_test tests/gfx.sdl.test.cpp)
 
 # this needs improvement
 target_include_directories(metasyntax_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src ${Boost_INCLUDE_DIRS})
 target_include_directories(scriptflow_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src ${Boost_INCLUDE_DIRS})
+target_include_directories(gfx_sdl_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src ${Boost_INCLUDE_DIRS})
 
 
-
-target_link_libraries(metasyntax_test PUBLIC sfml-system sfml-window sfml-graphics sfml-audio)
+target_link_libraries(gfx_sdl_test SDL2)
 
 # Those sweet, sweet designated initialisers force me to use C++20
 set_property(TARGET metasyntax_test PROPERTY CXX_STANDARD 20)
@@ -45,8 +45,12 @@ set_property(TARGET scriptflow_test PROPERTY CXX_STANDARD 20)
 set_property(TARGET scriptflow_test PROPERTY CXX_EXTENSIONS OFF)
 set_property(TARGET scriptflow_test PROPERTY CXX_STANDARD_REQUIRED ON)
 
+set_property(TARGET gfx_sdl_test PROPERTY CXX_STANDARD 20)
+set_property(TARGET gfx_sdl_test PROPERTY CXX_EXTENSIONS OFF)
+set_property(TARGET gfx_sdl_test PROPERTY CXX_STANDARD_REQUIRED ON)
 
 if (CMAKE_COMPILER_IS_GNUCXX)
 	target_compile_options(metasyntax_test PRIVATE -ftemplate-backtrace-limit=0 -Wfatal-errors -Wall -Wextra -Wno-unused-parameter -pthread -fmodules-ts)
 	target_compile_options(scriptflow_test PRIVATE -ftemplate-backtrace-limit=0 -Wfatal-errors -Wall -Wextra -Wno-unused-parameter -pthread -fmodules-ts)
+	target_compile_options(gfx_sdl_test PRIVATE -ftemplate-backtrace-limit=0 -Wfatal-errors -Wall -Wextra -Wno-unused-parameter -pthread -fmodules-ts)
 endif()
