--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.13.0)
 project(test1-vn VERSION 0.1.0 LANGUAGES CXX)
 
 
-set(BOOST_ROOT ./extern/boost_1_81_0/)
+set(BOOST_ROOT ./extern/boost_1_84_0/)
 set(Boost_USE_STATIC_LIBS OFF) 
 #set(Boost_USE_MULTITHREADED ON)  
 set(Boost_USE_STATIC_RUNTIME ON) 
@@ -50,7 +50,7 @@ set_property(TARGET gfx_sdl_test PROPERTY CXX_EXTENSIONS OFF)
 set_property(TARGET gfx_sdl_test PROPERTY CXX_STANDARD_REQUIRED ON)
 
 if (CMAKE_COMPILER_IS_GNUCXX)
-	target_compile_options(metasyntax_test PRIVATE -ftemplate-backtrace-limit=0 -Wfatal-errors -Wall -Wextra -Wno-unused-parameter -pthread -fmodules-ts)
-	target_compile_options(scriptflow_test PRIVATE -ftemplate-backtrace-limit=0 -Wfatal-errors -Wall -Wextra -Wno-unused-parameter -pthread -fmodules-ts)
-	target_compile_options(gfx_sdl_test PRIVATE -ftemplate-backtrace-limit=0 -Wfatal-errors -Wall -Wextra -Wno-unused-parameter -pthread -fmodules-ts)
+	target_compile_options(metasyntax_test PRIVATE -ftemplate-backtrace-limit=0 -Wfatal-errors -Wall -Wextra -Wno-unused-parameter -pthread)
+	target_compile_options(scriptflow_test PRIVATE -ftemplate-backtrace-limit=0 -Wfatal-errors -Wall -Wextra -Wno-unused-parameter -pthread)
+	target_compile_options(gfx_sdl_test PRIVATE -ftemplate-backtrace-limit=0 -Wfatal-errors -Wall -Wextra -Wno-unused-parameter -pthread)
 endif()
